# contextualize

./: .gitignore  .markdownlint.yaml  .pre-commit-config.yaml  BLOG.md  CLI_REDESIGN.md  FRAMEWORK.md  MANIFEST.in  POC-FINAL.md  POC.md  README.md  mcp_server.py  pyproject.toml  task-framework-mcp.json  task-framework-poc.md  task-launcher-sdk.py  task_launcher_mcp.py
context/concepts/: core.md  debugging.md  framework.md  mcp.md  python.md  setup.md  testing.md
context/reports/: README.md  bug-fix.md  command.md  default.md  research.md
contextualize/: __init__.py  async_launcher.py  claude_cli.py  cli.py  cli_old.py  cli_v1.py  concept_models.py  dag_visualizer.py  launcher.py  models.py  monitor.py  report_generator.py
contextualize/resources/: __init__.py
contextualize/resources/agents/contextualize/: config.json  instructions.md
contextualize/resources/commands/: contextualize.md
contextualize/resources/templates/concepts/: core.md
contextualize/resources/templates/reports/: default.md  research.md
docs/design/: BLOG.md  CLI_REDESIGN.md  FRAMEWORK.md  POC-FINAL.md  POC.md  task-framework-poc.md
